force-app/main/default/objects/Contact/fields/Posicion_Politica__c.field-meta.xml
<CustomField>
    <fullName>Posicion_Politica__c</fullName>
    <label>Posicion Politica</label>
    <type>TextArea</type>
</CustomField>