force-app/main/default/objects/Contact/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>Post</label>
    <type>TextArea</type>
</CustomField>