force-app/main/default/objects/Contact/fields/predictivo_caba_peronismo__c.field-meta.xml
<CustomField>
    <fullName>predictivo_caba_peronismo__c</fullName>
    <label>Predictivo CABA 2023 Peronismo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>