force-app/main/default/objects/Contact/fields/Predictivo_Misiones__c.field-meta.xml
<CustomField>
    <fullName>Predictivo_Misiones__c</fullName>
    <label>Predictivo_Misiones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Inalcanzable</fullName>
            </value>
            <value>
                <fullName>Potencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>