force-app/main/default/objects/Contact/fields/prj_filter_HacemosPorCordoba__c.field-meta.xml
<CustomField>
    <fullName>prj_filter_HacemosPorCordoba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filtro HacemosPorCordoba</label>
    <type>Checkbox</type>
</CustomField>