force-app/main/default/objects/Contact/fields/Prosumer_Sharing_Accts__c.field-meta.xml
<CustomField>
    <fullName>Prosumer_Sharing_Accts__c</fullName>
    <label>Prosumer Sharing Accts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>