force-app/main/default/objects/Contact/fields/Random_Filter_Aux__c.field-meta.xml
<CustomField>
    <fullName>Random_Filter_Aux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo auxiliar JCK</description>
    <label>Random_Filter_Aux</label>
    <type>Checkbox</type>
</CustomField>