force-app/main/default/objects/Contact/fields/res_mesa_historico_fdt__c.field-meta.xml
<CustomField>
    <fullName>res_mesa_historico_fdt__c</fullName>
    <label>Resultado promedio 2015-2019 FdT</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>