force-app/main/default/objects/Contact/fields/res_mesa_paso2021_fdt__c.field-meta.xml
<CustomField>
    <fullName>res_mesa_paso2021_fdt__c</fullName>
    <label>Resultado PASO 2021 Fdt</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>