force-app/main/default/objects/Contact/fields/RiverId_cat_socio__c.field-meta.xml
<CustomField>
    <fullName>RiverId_cat_socio__c</fullName>
    <label>Categoría de socio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>