force-app/main/default/objects/Contact/fields/RiverId_fecha_socio__c.field-meta.xml
<CustomField>
    <fullName>RiverId_fecha_socio__c</fullName>
    <label>Fecha de alta de socio</label>
    <type>Date</type>
</CustomField>