force-app/main/default/objects/Contact/fields/Search_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Search_Birthdate__c</fullName>
    <formula>LPAD(TEXT(Day( Birthdate )),2,&apos;0&apos;) + &quot;/&quot; + LPAD(TEXT(Month( Birthdate )),2,&apos;0&apos;) + &quot;/&quot; + TEXT(Year( Birthdate ))</formula>
    <label>Fecha de nacimiento</label>
    <type>Text</type>
</CustomField>