force-app/main/default/objects/Contact/fields/SearchCriteria__c.field-meta.xml
<CustomField>
    <fullName>SearchCriteria__c</fullName>
    <label>Search Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>