force-app/main/default/objects/Contact/fields/sha256_email__c.field-meta.xml
<CustomField>
    <fullName>sha256_email__c</fullName>
    <label>SHA256 Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>