force-app/main/default/objects/Contact/fields/sha265_mobile_phone_e164__c.field-meta.xml
<CustomField>
    <fullName>sha265_mobile_phone_e164__c</fullName>
    <label>SHA265 Mobile Phone E.164</label>
    <length>32</length>
    <type>Text</type>
</CustomField>