force-app/main/default/objects/Contact/fields/situacion_del_asalariado__c.field-meta.xml
<CustomField>
    <fullName>situacion_del_asalariado__c</fullName>
    <label>Situación del Asalariado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disminución poder adquisitivo</fullName>
            </value>
            <value>
                <fullName>Cambio de trabajo últimos 12 meses</fullName>
            </value>
            <value>
                <fullName>Reducción personal 50%</fullName>
            </value>
            <value>
                <fullName>Despedido en los últimos 12 meses</fullName>
            </value>
            <value>
                <fullName>PYME 10</fullName>
            </value>
            <value>
                <fullName>PYME 20</fullName>
            </value>
            <value>
                <fullName>PYME 50</fullName>
            </value>
            <value>
                <fullName>PYME 500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>