force-app/main/default/objects/Contact/fields/Sueldo_1__c.field-meta.xml
<CustomField>
    <fullName>Sueldo_1__c</fullName>
    <label>Sueldo #1</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>