force-app/main/default/objects/Contact/fields/Sys_Record_NO_Borrar__c.field-meta.xml
<CustomField>
    <fullName>Sys_Record_NO_Borrar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de Citizen que no se debe borrar ( users communities, Citizen Tests, etc)</description>
    <inlineHelpText>Indicador de Citizen que no se debe borrar ( users communities, Citizen Tests, etc)</inlineHelpText>
    <label>Sys Record (NO Borrar)</label>
    <type>Checkbox</type>
</CustomField>