force-app/main/default/objects/Contact/fields/tax_is_employer__c.field-meta.xml
<CustomField>
    <fullName>tax_is_employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Empleador?</label>
    <type>Checkbox</type>
</CustomField>