force-app/main/default/objects/Contact/fields/tax_regime__c.field-meta.xml
<CustomField>
    <fullName>tax_regime__c</fullName>
    <label>Régimen Impositivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simplificado</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>