force-app/main/default/objects/Contact/fields/tax_simplified_category__c.field-meta.xml
<CustomField>
    <fullName>tax_simplified_category__c</fullName>
    <label>Monotributo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>