force-app/main/default/objects/Contact/fields/Tendencia_AF_Generales__c.field-meta.xml
<CustomField>
    <fullName>Tendencia_AF_Generales__c</fullName>
    <label>Tendencia AF Generales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swing</fullName>
            </value>
            <value>
                <fullName>Vulnerable</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Inalcanzable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>