force-app/main/default/objects/Contact/fields/Tendencia_Politica_CBA__c.field-meta.xml
<CustomField>
    <fullName>Tendencia_Politica_CBA__c</fullName>
    <label>Tendencia CBA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBA Inalcanzables</fullName>
            </value>
            <value>
                <fullName>CBA Potenciales</fullName>
            </value>
            <value>
                <fullName>CBA Base</fullName>
            </value>
            <value>
                <fullName>score_base</fullName>
                <isActive>false</isActive>
                <label>score_base</label>
            </value>
            <value>
                <fullName>score_inalcanzables</fullName>
                <isActive>false</isActive>
                <label>score_inalcanzables</label>
            </value>
            <value>
                <fullName>score_potenciales</fullName>
                <isActive>false</isActive>
                <label>score_potenciales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>