force-app/main/default/objects/Contact/fields/Tendencia_Politica_STAFE__c.field-meta.xml
<CustomField>
    <fullName>Tendencia_Politica_STAFE__c</fullName>
    <label>Tendencia_Politica_STAFE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Inalcanzable</fullName>
            </value>
            <value>
                <fullName>Potencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>