force-app/main/default/objects/Contact/fields/Territorio_Admin_Level__c.field-meta.xml
<CustomField>
    <fullName>Territorio_Admin_Level__c</fullName>
    <formula>Territorio_Administrativo__r.Nivel_Administrativo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territorio Admin Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>