force-app/main/default/objects/Contact/fields/Territorio_Administrativo__c.field-meta.xml
<CustomField>
    <fullName>Territorio_Administrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vinculo con Nuevo Objeto Custom &quot;Territorio Administrativo &quot;</description>
    <inlineHelpText>Vinculo con Nuevo Objeto Custom &quot;Territorio Administrativo &quot;</inlineHelpText>
    <label>Territorio Administrativo</label>
    <referenceTo>Territorio_Administrativo__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>