force-app/main/default/objects/Contact/fields/Tiene_Email__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Email__c</fullName>
    <formula>if( Email  =&apos;&apos;, false , true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Email</label>
    <type>Checkbox</type>
</CustomField>