force-app/main/default/objects/Contact/fields/Tiene_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Facebook__c</fullName>
    <formula>IF( (Facebook_Link__c !=&quot;&quot;  ||   Usuario_Facebook__c != &quot;&quot;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Facebook ?</label>
    <type>Checkbox</type>
</CustomField>