force-app/main/default/objects/Contact/fields/Tiene_Instagram__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Instagram__c</fullName>
    <formula>IF( ( Instagram_Link__c  !=&quot;&quot; ||  Usuario_Instagram__c  != &quot;&quot;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Instagram ?</label>
    <type>Checkbox</type>
</CustomField>