force-app/main/default/objects/Contact/fields/Tiene_Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Linkedin__c</fullName>
    <formula>IF( ( Linkedin_Link__c !=&quot;&quot; || Usuario_Linkedin__c  != &quot;&quot;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Linkedin ?</label>
    <type>Checkbox</type>
</CustomField>