force-app/main/default/objects/Contact/fields/Tiene_Moviles__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Moviles__c</fullName>
    <formula>if(MobilePhone =&apos;&apos;, false , true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Moviles</label>
    <type>Checkbox</type>
</CustomField>