force-app/main/default/objects/Contact/fields/Tiene_Telefonos_Fijos__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Telefonos_Fijos__c</fullName>
    <formula>if(  HomePhone =&apos;&apos;, false , true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Telefonos Fijos</label>
    <type>Checkbox</type>
</CustomField>