force-app/main/default/objects/Contact/fields/Tiene_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Twitter__c</fullName>
    <formula>IF( ( Twitter_Link__c !=&quot;&quot; || Usuario_Twitter__c  != &quot;&quot;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Twitter ?</label>
    <type>Checkbox</type>
</CustomField>