force-app/main/default/objects/Contact/fields/tipo_de_asalariado__c.field-meta.xml
<CustomField>
    <fullName>tipo_de_asalariado__c</fullName>
    <label>Tipo de Asalariado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desocupado</fullName>
            </value>
            <value>
                <fullName>Despedido</fullName>
            </value>
            <value>
                <fullName>Eventual</fullName>
            </value>
            <value>
                <fullName>Ocupado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>