force-app/main/default/objects/Contact/fields/tribu_electoral_2021__c.field-meta.xml
<CustomField>
    <fullName>tribu_electoral_2021__c</fullName>
    <label>Tribu Electoral 2021</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materialistas</fullName>
            </value>
            <value>
                <fullName>Desencantados</fullName>
            </value>
            <value>
                <fullName>Subsistentes</fullName>
            </value>
            <value>
                <fullName>Sectores populares</fullName>
            </value>
            <value>
                <fullName>Cosmopolitas</fullName>
            </value>
            <value>
                <fullName>Conservadores</fullName>
            </value>
            <value>
                <fullName>Progresistas</fullName>
            </value>
            <value>
                <fullName>Tradicionalistas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>