force-app/main/default/objects/Contact/fields/tribu_electoral_2023__c.field-meta.xml
<CustomField>
    <fullName>tribu_electoral_2023__c</fullName>
    <label>Tribu Electoral 2023</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amarillos</fullName>
            </value>
            <value>
                <fullName>Azules</fullName>
            </value>
            <value>
                <fullName>Celestes</fullName>
            </value>
            <value>
                <fullName>Naranjas</fullName>
            </value>
            <value>
                <fullName>Rojos</fullName>
            </value>
            <value>
                <fullName>Verdes</fullName>
            </value>
            <value>
                <fullName>Violetas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>