force-app/main/default/objects/Contact/fields/Tuvo_Covid19__c.field-meta.xml
<CustomField>
    <fullName>Tuvo_Covid19__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuvo Covid19</label>
    <type>Checkbox</type>
</CustomField>