force-app/main/default/objects/Contact/fields/Twitter_Link__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Link__c</fullName>
    <label>Twitter Link</label>
    <type>Url</type>
</CustomField>