force-app/main/default/objects/Contact/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>