force-app/main/default/objects/Contact/fields/Usuario_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Facebook__c</fullName>
    <description>Nombre de Usuario de Facebook</description>
    <label>Usuario Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>