force-app/main/default/objects/Contact/fields/Usuario_Instagram__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Instagram__c</fullName>
    <label>Usuario Instagram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>