force-app/main/default/objects/Contact/fields/Usuario_Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Linkedin__c</fullName>
    <label>Usuario Linkedin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>