force-app/main/default/objects/Contact/fields/voting_intent_PASO2023__c.field-meta.xml
<CustomField>
    <fullName>voting_intent_PASO2023__c</fullName>
    <label>Intención de Voto PASO2023</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blanco</fullName>
            </value>
            <value>
                <fullName>Milei</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Grabois</fullName>
            </value>
            <value>
                <fullName>Bullrich</fullName>
            </value>
            <value>
                <fullName>Massa</fullName>
            </value>
            <value>
                <fullName>Izquierda</fullName>
            </value>
            <value>
                <fullName>Schiaretti</fullName>
            </value>
            <value>
                <fullName>Larreta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>