force-app/main/default/objects/Contact/fields/voting_P2015__c.field-meta.xml
<CustomField>
    <fullName>voting_P2015__c</fullName>
    <label>Elección P2015</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO EMPADRONADO</fullName>
                <default>true</default>
                <label>NO EMPADRONADO</label>
            </value>
            <value>
                <fullName>EMITIDO</fullName>
            </value>
            <value>
                <fullName>NO VOTO</fullName>
            </value>
            <value>
                <fullName>NO VOTO (MENOR DE 18)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>