force-app/main/default/objects/Contact/fields/voting_PASO2023_turnout__c.field-meta.xml
<CustomField>
    <fullName>voting_PASO2023_turnout__c</fullName>
    <label>Elección PASO2023 Presentismo</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>