force-app/main/default/objects/Contact/fields/voting_segment_af__c.field-meta.xml
<CustomField>
    <fullName>voting_segment_af__c</fullName>
    <label>Segmento Intención AF</label>
    <length>16</length>
    <type>Text</type>
</CustomField>