force-app/main/default/objects/Contact/recordTypes/Argentino.recordType-meta.xml
<RecordType>
    <fullName>Argentino</fullName>
    <active>true</active>
    <description>Tipo de Registro default para Contactos de Prosumia.</description>
    <label>Argentino</label>
</RecordType>