force-app/main/default/objects/Contact/recordTypes/Brasilero.recordType-meta.xml
<RecordType>
    <fullName>Brasilero</fullName>
    <active>true</active>
    <label>Brasilero</label>
</RecordType>