force-app/main/default/objects/Contact/recordTypes/Chileno.recordType-meta.xml
<RecordType>
    <fullName>Chileno</fullName>
    <active>true</active>
    <label>Chileno</label>
</RecordType>