force-app/main/default/objects/Contact/recordTypes/Ecuatoriano.recordType-meta.xml
<RecordType>
    <fullName>Ecuatoriano</fullName>
    <active>true</active>
    <label>Ecuatoriano</label>
</RecordType>