force-app/main/default/objects/Contact/validationRules/ADFiNoSalutationEditALLexceptSYSADMIN.validationRule-meta.xml
<ValidationRule>
    <fullName>ADFiNoSalutationEditALLexceptSYSADMIN</fullName>
    <active>false</active>
    <description>Evitar la edicion de los campos de nombre de contacto para el Perfil ADFi Baseline</description>
    <errorConditionFormula>AND(

 $Profile.Name !=&quot;System Administrator&quot;,
ISCHANGED(  Salutation  ))</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>No se pueden editar  los campos del nombre del contacto</errorMessage>
</ValidationRule>