force-app/main/default/objects/Contact/validationRules/OnlySYSADMINCanEditFirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlySYSADMINCanEditFirstName</fullName>
    <active>false</active>
    <description>Evitar la edicion de los campos de nombre de contacto para el Perfil ADFi Baseline</description>
    <errorConditionFormula>AND(

 $Profile.Name !=&quot;System Administrator&quot;,
ISCHANGED( FirstName ))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>No se pueden editar  los campos del nombre del contacto</errorMessage>
</ValidationRule>