force-app/main/default/objects/Contact/validationRules/OnlySYSADMINcanEditLastName.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlySYSADMINcanEditLastName</fullName>
    <active>false</active>
    <description>Evitar la edicion de los campos de nombre de contacto</description>
    <errorConditionFormula>AND(

 $Profile.Name !=&quot;System Administrator&quot;,
ISCHANGED(  LastName  ))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>No se pueden editar  los campos del nombre del contacto</errorMessage>
</ValidationRule>